...
                                    </mask>
                                </variation>
                                <connections>
                                    <outlet property="delegate" destination="kaA-LO-2KT" id="PeC-gA-G7c"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="egk-sL-Frv">
                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="233" id="RXH-Sf-ZPt"/>
                                    <constraint firstAttribute="height" constant="30" id="kUR-fL-pLv"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        <viewControllerLayoutGuide type="bottom" id="miK-3i-Oa0"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Au3-Li-xEq">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wb7-Yk-vAg">
                                <rect key="frame" x="197" y="137" width="207" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="OSp-br-W7S"/>
                                    <constraint firstAttribute="width" constant="207" id="xJk-kN-wFE"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
