...
                                    <constraint firstAttribute="width" constant="207" id="91q-g5-YDZ"/>
                                    <constraint firstAttribute="height" constant="30" id="hXB-Mi-EbJ"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="LOGIN">
                                            <attributes>
                                                <font key="NSFont" size="18" name="ArialMT"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
                                </state>
...
